without axios & async/await

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "keywords": [],
   "license": "ISC",
   "dependencies": {
-    "modern-normalize": "^1.1.0"
+    "modern-normalize": "^1.1.0",
+    "notiflix": "^3.2.6",
+    "simplelightbox": "^2.14.2"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
