chore: fill README.md

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "parcel-project-template",
+  "name": "goit-js-hw-11",
   "version": "2.0.0",
   "description": "",
   "homepage": "https://y-hrubskyi.github.io/goit-js-hw-11",
